# LitePhoton

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
example/: Cargo.toml
example/src/: main.rs
src/: argument_parser.rs  enviroment.rs  environment.rs  file_util.rs  input.rs  lib.rs  logger.rs  main.rs  read_util.rs
src/read_util/: common.rs  mod.rs
