[package]
name = "LitePhoton"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
log = "0.4.27"
log4rs = "1.4.0-rc2"
num_cpus = "1.17.0"
twoway = "0.2.2"
rayon = "1.10.0"
atty = "0.2.14"
strum = "0.27.2"
strum_macros = "0.27.2"
memmap2 = "0.9.8"
memchr = "2.7.5"

[profile.release]
strip = true
lto = "fat"
opt-level = "z"
codegen-units = 1
panic = "abort"
debug = 0 ## true this only when flamegraph needed / or profiling